--- a/divlist.html
+++ b/divlist.html
@@ -31,7 +31,8 @@
 	<p> Press the button to create an new element of type div and then add it to the container.
 		</p>
 		<button onclick="makeNewDiv()">Add end</button>
-	
+        <button onclick="addFront()">Add Front</button>
+        <button onclick="remove()">remove</button>
 	
 </body>
 <script>
@@ -47,7 +48,29 @@
 		let container = document.getElementById('target')
 		container.appendChild(element)
 		
+
 	}
+
+    function remove(){
+        var removeditems = document.getElementsByClassName("divlist");
+		var len = removeditems.length;
+		if (len > 0) {
+			index = Math.floor(len / 2);
+			removeditems[index].remove();
+		}
+    }
+    function addFront(){
+        let element = document.createElement("div")
+		element.innerHTML = document.getElementById("input").value;
+		element.style.color = "orange";
+		element.className = "divlist";
+
+		/* add it to the container */
+		let container = document.getElementById('target')
+		container.insertBefore(element, container.firstChild);
+
+    }
+
 </script>
 
 
