--- a/precision.html
+++ b/precision.html
@@ -24,7 +24,8 @@
         }
 
         function startTime(){
-          for (let i=0;i < 5; i++){
+          let ran=Math.floor(Math.random()*(10 - 2 + 1) + 2);
+          for (let i=0;i < ran; i++){
             setTimeout(() => {
               document.getElementById('counter').innerHTML = i;
             }, ((4-i)*1000));
